--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="attos-semente.html" class="link">Attos sementes</a></h3>
-										<p>Redisign do site Attos Sementes</p>
+										<p>Redesign do site Attos Sementes</p>
 									</header>
 								</article>
 								<article>
