--- a/projeto-melitta.html
+++ b/projeto-melitta.html
@@ -33,7 +33,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/foto-projeto1.png" alt="" />
+								<img src="images/pic10.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Projeto Mellita</h1>
