--- a/carrefour-teste-usabilidade.html
+++ b/carrefour-teste-usabilidade.html
@@ -88,56 +88,24 @@
 								</section>
 							</section>
 					</div>
-
-				<!-- Contact -->
+<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Nome</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">E-mail</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Mensagem</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Enviar" class="primary" /></li>
-										<li><input type="reset" value="Apagar" /></li>
-									</ul>
-								</form>
+								<h1 class="lets-talk"><span class="color1">E aí? <br></span> <span class="color2">Vamos </span><span class="color3">conversar!</span></h1>
+								<a class="email-text" href="mailto:rafaella2805@gmail.com">rafaella2805@gmail.com</a> /
+								<div class="celular">
+									<!-- <span class="icon solid alt fa-phone"></span> -->
+									<h3>Celular</h3>
+									<span class="number">(11) 99462-4901</span>
+								</div> /
+								<div class="whats">
+									<!-- <span><img src="images/whats.png"></span>  -->
+									<h3>WhatsApp</h3>
+									<span class="number">(11) 93144-1580</span>
+								</div>
 							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>E-mail</h3>
-										<a href="mailto:rafaella2805@gmail.com?subject=Assunto da Mensagem">rafaella2805@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Celular</h3>
-										<span>(11) 99462-4901</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Endereço</h3>
-										<span>Chácara Santo Antônio<br />
-										 São paulo, SP<br />
-									</div>
-								</section>
-							</section>
+							
 						</div>
 					</section>
 
