--- a/projeto-melitta.html
+++ b/projeto-melitta.html
@@ -33,7 +33,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic10.jpg" alt="" />
+								<img src="images/landing-page.png" alt="" />
 							</span>
 							<header class="major">
 								<h1>Projeto Mellita</h1>
@@ -58,7 +58,7 @@
 							</section>
 
 						<!-- Two -->
-							<!-- <section id="two" class="spotlights">
+							<section id="two" class="spotlights">
 								<section>
 									<iframe width="100%" height="auto" src="https://www.youtube.com/embed/FR0ruXG0AjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<div class="content">
@@ -86,58 +86,27 @@
 										</div>
 									</div>
 								</section>
-							</section> -->
+							</section>
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Nome</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">E-mail</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Mensagem</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Enviar" class="primary" /></li>
-										<li><input type="reset" value="Apagar" /></li>
-									</ul>
-								</form>
+								<h1 class="lets-talk"><span class="color1">E aí? <br></span> <span class="color2">Vamos </span><span class="color3">conversar!</span></h1>
+								<a class="email-text" href="mailto:rafaella2805@gmail.com">rafaella2805@gmail.com</a> /
+								<div class="celular">
+									<!-- <span class="icon solid alt fa-phone"></span> -->
+									<h3>Celular</h3>
+									<span class="number">(11) 99462-4901</span>
+								</div> /
+								<div class="whats">
+									<!-- <span><img src="images/whats.png"></span>  -->
+									<h3>WhatsApp</h3>
+									<span class="number">(11) 93144-1580</span>
+								</div>
 							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>E-mail</h3>
-										<a href="mailto:rafaella2805@gmail.com?subject=Assunto da Mensagem">rafaella2805@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Celular</h3>
-										<span>(11) 99462-4901</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Endereço</h3>
-										<span>Chácara Santo Antônio<br />
-										 São paulo, SP<br />
-									</div>
-								</section>
-							</section>
+							
 						</div>
 					</section>
 
