--- a/projeto-melitta.html
+++ b/projeto-melitta.html
@@ -33,10 +33,10 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/landing-page.png" alt="" />
+								<img src="images/lp-melitta.png" alt="" />
 							</span>
 							<header class="major">
-								<h1>Projeto Mellita</h1>
+								<h1>Projeto Melitta</h1>
 							</header>
 							<div class="content">
 								<p>Landing page cápsulas Melitta</p>
@@ -51,26 +51,24 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Landing page das cápsuas biodegradáveis do café Mellita</h2>
+										<h2 class="after">Cápsulas biodegradáveis e compostáveis Melitta</h2>
 									</header>
-									<p>Em Breve</p>
+									<p>Feitas de material natural de fonte renovável, as novas cápsulas Melitta possuem uma tecnologia que permite o retorno ao solo em forma de adubo. Ou seja, a terra te oferece o café e você agradece devolvendo nutrientes.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<iframe width="100%" height="auto" src="https://www.youtube.com/embed/FR0ruXG0AjU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<a class="image">
+										<img src="images/crop1.png">
+									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Roteiro</h3>
+												<h3>Destaque para as cápsulas</h3>
 											</header>
-											<p>Nesse teste nós escolhemos usuários que já haviam comprado pelo menos 1 vez no e-commerce do carrefour, e demos a eles um roteiro onde o mesmo deveria comprar alguns itens de uma lista de supermercado. </p>
-											<p>Observamos pontos como: facilidade em encontrar as opções desejadas, se o usuário utilizava mais a busca do site ou o menu de categorias do supermecado, se as informações contidas no card de produto eram suficientes.</p>
-											<p>No vídeo ao lado temos o protótipo navegavél utilizado nesse teste, ele foi desenvolvido com a ferramenta figma.</p>
-											<p><a class="link" target="blank_" href="https://www.figma.com/proto/7ecuBOIcOqXpw0I4G7KaVE/Protótipo-Teste-de-Usabilidade-V2?node-id=95%3A31785&scaling=scale-down&page-id=0%3A1&starting-point-node-id=95%3A31785">Clique aqui</a> para acessar o protótipo navegavél.</p>
-										</div>
+											<p>O desafio era fazer com que o usuário entendesse que as novas cápsulas tinham essa pegada de sustentabilidade, por isso usamos a imagem de terra e tons verdes.</p>
 									</div>
 								</section>
 								<section>
