--- a/index.html
+++ b/index.html
@@ -79,29 +79,30 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="attos-semente.html" class="link">Attos sementes</a></h3>
-										<p>Redesign do site Attos Sementes</p>
+										<h3><a href="#" class="link">Oi salas</a></h3>
+										<p>Em breve - Case de aplicativo desenvolvido para OI internet</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="case-oi-salas.html" class="link">Oi salas</a></h3>
-										<p>Case de aplicativo desenvolvido para OI internet</p>
+										<h3><a href="#" class="link">Attos sementes</a></h3>
+										<p>Em breve - Redesign do site Attos Sementes</p>
 									</header>
 								</article>
+								
 								<article>
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="projeto-brf.html" class="link">Projeto BRF</a></h3>
-										<p>E-commerce Mercato em Casa</p>
+										<h3><a href="#" class="link">Projeto BRF</a></h3>
+										<p>Em breve - E-commerce Mercato em Casa</p>
 									</header>
 								</article>
 							</section>
