--- a/portfolio.html
+++ b/portfolio.html
@@ -29,49 +29,68 @@
 						</ul>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner" class="style2">
-						<div class="inner">
-							<span class="image">
-								<img src="images/foto-projeto1.png" alt="" />
-							</span>
-							<header class="major">
-								<h1>Design System Carrefour</h1>
-							</header>
-							<div class="content">
-								<p>Construção do design system para o e-commerce Carrefour Brasil</p>
-							</div>
-						</div>
-					</section>
-
 				<!-- Main -->
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
-								<div class="inner">
+							<section id="one" class="tiles">
+								<article>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
 									<header class="major">
-										<h2 class="after">Do zero ao Design System</h2>
+										<h3><a href="carrefour-teste-usabilidade.html" class="link">Carrefour Brasil</a></h3>
+										<p>Teste de usabilidade</p>
 									</header>
-									<p></p>
-								</div>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="design-system-carrefour.html" class="link">Design System Carrefour</a></h3>
+										<p>Construção do design system para o e-commerce Carrefour Brasil</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="projeto-melitta.html" class="link">Projeto Melitta</a></h3>
+										<p>Landing page cápsulas Melitta</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Oi salas</a></h3>
+										<p>Em breve - Case de aplicativo desenvolvido para OI internet</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Attos sementes</a></h3>
+										<p>Em breve - Redesign do site Attos Sementes</p>
+									</header>
+								</article>
+								
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Projeto BRF</a></h3>
+										<p>Em breve - E-commerce Mercato em Casa</p>
+									</header>
+								</article>
 							</section>
 
-						<!-- Two -->
-							 <section id="two" class="spotlights">
-								<section>
-									<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" target="_blank" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuWud4YBTnyNEQUM3y4bcp1%2FCarrefour-Brazil-Style-Guide%3Fnode-id%3D1401%253A6381%26scaling%3Dscale-down%26page-id%3D153%253A450%26starting-point-node-id%3D1401%253A6381%26show-proto-sidebar%3D1" allowfullscreen></iframe>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Construindo </h3>
-											</header>
-											<p>O e-commerce do Carrefour Brasil passou por grandes mudanças nos últimos anos, e com a troca de plataforma surgiu a oportunidade de desenvolver um design system, onde pudessemos ter uma </p>
-											<p><a href="https://www.figma.com/file/uWud4YBTnyNEQUM3y4bcp1/Carrefour-Brazil-Style-Guide?node-id=1401%3A6381">Clique aqui</a> para visualizar o projeto completo.</p>
-										</div>
-									</div>
-								</section>
-								
 					</div>
 
 				<!-- Contact -->
