--- a/projeto-melitta.html
+++ b/projeto-melitta.html
@@ -66,21 +66,22 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Destaque para as cápsulas</h3>
+												<h3>Sustentabilidade</h3>
 											</header>
-											<p>O desafio era fazer com que o usuário entendesse que as novas cápsulas tinham essa pegada de sustentabilidade, por isso usamos a imagem de terra e tons verdes.</p>
+											<p>O desafio era mostrar para o usuário que as novas cápsulas estavam diretamente relacionada com questões de sustentabilidade, agregando valor ao produto e consequentemente gerando interesse de compra.</p>
 									</div>
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/novo-site.png" alt="" data-position="top center" />
+										<img src="images/crop2.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Considerações finais</h3>
+												<h3>Infográfico</h3>
 											</header>
-											<p>A partir dos resultados obtidos no teste de usabilidade, conseguimos identificar vários pontos de melhoria na jornada de compra, foi através dele que percebemos a necessidade do e-commerce ter uma home para supermercado e outra para shopping, com uma navegação em abas, onde o usuário não precisa navegar em urls diferentes. Outro ponto importante foi a separação de corredores que se assemelham a experiência de uma visita a um supermercado físico.</p>
+											<p>Uma das idéias desse projeto era mostrar como o usuário poderia fazer o descarte correto das cápsulas, para isso desenvolvemos um infográfico com o passo a passo do descarte.</p>
+											<p><a href="https://www.figma.com/proto/e5u9g21WKdTVhacLS0WRZP/lp-melitta?node-id=1%3A3&scaling=min-zoom&page-id=0%3A1" target="_blank">Clique aqui</a> e veja o layout completo</p>
 										</div>
 									</div>
 								</section>
