--- a/sobre-ella.html
+++ b/sobre-ella.html
@@ -39,7 +39,7 @@
 									<header class="major">
 										<h1>Sobre Ella</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="main"><img src="images/rafa.png" alt="" height="auto" style="margin: 0 0 40px 0; display: ;"  /></span>
 									<p>Desde 2008 trabalho como designer, com foco em desenvolvimento de sites. Gosto muito de desenvolver projetos que sejam simples para os usuários e que tragam benefícios para empresas e empreendedores.</p>
 									<p>Ao longo deste tempo, me especializei como front-end e product designer pelos desafios de tornar meus próprios layouts e idéias em códigos que facilitem a experiência e interação com os usuários.</p>
 
