--- a/design-system-carrefour.html
+++ b/design-system-carrefour.html
@@ -33,7 +33,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/foto-projeto1.png" alt="" />
+								<img src="images/design-system.png" alt="" />
 							</span>
 							<header class="major">
 								<h1>Design System Carrefour</h1>
@@ -51,7 +51,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2 class="after">Do zero ao Design System</h2>
+										<h2 class="after">"O Design System é um Documento vivo"</h2>
 									</header>
 									<p></p>
 								</div>
@@ -64,9 +64,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Construindo </h3>
+												<h3>O projeto </h3>
 											</header>
-											<p>O e-commerce do Carrefour Brasil passou por grandes mudanças nos últimos anos, e com a troca de plataforma surgiu a oportunidade de desenvolver um design system, onde pudessemos ter uma </p>
+											<p>O e-commerce Carrefour Brasil, passou por uma mudança de plataforma, e foi aonde surgiu a oportunidade de desenvolver um design system, com o objetivo de melhorar a comunicação do time e criar um padrão visual para esse produto.</p>
+											<p></p>
 											<p><a href="https://www.figma.com/file/uWud4YBTnyNEQUM3y4bcp1/Carrefour-Brazil-Style-Guide?node-id=1401%3A6381">Clique aqui</a> para visualizar o projeto completo.</p>
 										</div>
 									</div>
