--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Oi salas</a></h3>
+										<h3><a href="" class="link">Oi salas</a></h3>
 										<p>Em breve - Case de aplicativo desenvolvido para OI internet</p>
 									</header>
 								</article>
@@ -91,7 +91,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Attos sementes</a></h3>
+										<h3><a href="" class="link">Attos sementes</a></h3>
 										<p>Em breve - Redesign do site Attos Sementes</p>
 									</header>
 								</article>
@@ -101,7 +101,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Projeto BRF</a></h3>
+										<h3><a href="" class="link">Projeto BRF</a></h3>
 										<p>Em breve - E-commerce Mercato em Casa</p>
 									</header>
 								</article>
