--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<h2>Sobre Ella</h2>
 									</header>
 									<p>Desde 2008 trabalho como designer, com foco em desenvolvimento de sites. Gosto muito de desenvolver projetos que sejam simples para os usuários e que tragam benefícios para empresas e empreendedores.</p>
-									<p>Ao longo deste tempo, me especializei como front-end e product designer pelos desafios de tornar meus próprios layouts e idéias em códigos que facilitem a experiência e interação com os usuários.</p>
+									<!-- <p>Ao longo deste tempo, me especializei como front-end e product designer pelos desafios de tornar meus próprios layouts e idéias em códigos que facilitem a experiência e interação com os usuários.</p> -->
 									<ul class="actions">
 										<li><a href="sobre-ella.html" class="button next">saiba mais</a></li>
 									</ul>
